# hfs

./: .buildconfig  .gitignore  CMakeLists.txt  Makefile  OSX_DEPS.md  README  README.md  compile_commands.json
.cache/clangd/index/: BTree.c.9F10E52A291FD0EA.idx  BTree.h.233793EA909BFDCF.idx  BTreeAllocate.c.23CFB355F597CC40.idx  BTreeMiscOps.c.D992E8F6590D750A.idx  BTreeNodeOps.c.C5FEEF014FD76C20.idx  BTreePrivate.h.9B3930A5123251BB.idx  BTreeScanner.c.27E823ADE1202924.idx  BTreeScanner.h.EA15DCEF85EC5CBC.idx  BTreeTreeOps.c.046219C5715829CF.idx  BlockCache.c.AA5F47173A4E9226.idx  CaseFolding.h.8E64F2BC313785E6.idx  CatalogCheck.c.92A0AAA3E9BE7431.idx  CheckHFS.h.1823D8B1524EC047.idx  DecompData.h.B6B8F2DBD4B893C8.idx  DecompDataEnums.h.9AABEC2D86BF79C4.idx  DecompMakeData.c.4E5C022C47027182.idx  HardLinkCheck.c.D7D67DCE98C1C1E0.idx  SAllocate.c.0CAFEE2337F20911.idx  SBTree.c.CCBBAED687646C3F.idx  SCatalog.c.9C48C95298588548.idx  SControl.c.47C13F51C59A8B7E.idx  SDevice.c.B5D3D426C387C4B8.idx  SExtents.c.7338046581A4F168.idx  SKeyCompare.c.66950470236825AB.idx  SRebuildBTree.c.B4DB7CFC79CD23F5.idx  SRepair.c.676D10DF27D97E9C.idx  SRuntime.h.0AF7BFDA8118C13E.idx  SStubs.c.93FD3DFD294D13B0.idx  SUtils.c.5064B6B2B6B1735A.idx  SVerify1.c.5543CEF3ED75F8DE.idx  SVerify2.c.444D24ACA4B8517F.idx  Scavenger.h.18424F822E90037D.idx  VolumeBitmapCheck.c.3DF330958BE9B353.idx  apple_types.h.60E4E5E2AA7D65A4.idx  appleapiopts.h.5EB98FD196E0B0AC.idx  bitstring.h.C3C3569B62B3BD07.idx  cache.c.A5B171655F5C7B50.idx  cache.h.1AF1F3587A992DED.idx  check.c.B5A0B6E19B0064DF.idx  check.cc.7093245EF697BCF3.idx  (+44 more)
.github/workflows/: linux.yml
core/: Makefile  hfs_iokit.cpp  hfs_iokit.h
debian/: changelog  control  files  rules
fsck_hfs/: CMakeLists.txt  fsck_hfs.c  fsck_hfs.h  fsck_messages.c  fsck_messages.h  utilities.c
gtest/: CMakeLists.txt  disk-image.cc  disk-image.h
gtest/fsck_hfs/: check.cc  no_device.cc  no_hfs.cc  test-fsck_hfs.hh
gtest/newfs_hfs/: format.cc  no_device.cc  test-newfs_hfs.hh
hfs.mk/: cc.mk
hfs_japanese/: Makefile
hfs_japanese/hfs_japanese.kmodproj/: Makefile
include/: apple_types.h  bitstring.h  os_byte_order.h
include/hfs/: hfs_format.h
include/sys/: disk.h
lib_fsck_hfs/: CMakeLists.txt  cache.c  check.c  check.h  fsck_journal.c  lib_fsck_hfs.c  lib_fsck_hfs.h
lib_fsck_hfs/dfalib/: BlockCache.c  CMakeLists.txt  SControl.c  SDevice.c  SRuntime.h  SVerify1.c  SVerify2.c  Scavenger.h  VolumeBitmapCheck.c  hfsVersionString.c  hfs_endian.c  hfs_endian.h  uuid.c
mount_hfs/: Makefile
newfs_hfs/: CMakeLists.txt  Makefile  hfs_endian.c  hfs_endian.h  makehfs.c  newfs_hfs.c  newfs_hfs.h
tests/: CMakeLists.txt  disk-image.h  disk-image.m  hfs-tests.mm  hfs_alloc_test.c  hfs_alloc_test.mk  hfs_extents_test.mk  hfs_tests.mk  rangelist_test.mk  systemx.c  test-utils.h  tools.h
tests/cases/: test-access.c  test-deep-rm.c  test-defrag.c  test-dir-link.c  test-external-jnl.c
